create food listing

--- a/Homepage.html
+++ b/Homepage.html
@@ -88,7 +88,7 @@
                   <li class="toggleable">
                     <a class="menu-item" href="javascript:void()">Pages</a>
                     <ul class="sub-menu">
-                      <li><a href="login.html">logout</a></li>
+                      <li><a href="login.html" id="logout">logout</a></li>
                       <li><a href="FAQ.html">FAQ</a></li>
                       <li><a href="contact_us.html">contact us</a></li>
                     </ul>
@@ -146,10 +146,10 @@
                       </li>
 
                       <li class="toggleable">
-                          <a class="menu-item" href="login.html">Logout</a>
+                          <a class="menu-item" href="login.html" id="logout">Logout</a>
                           <span class="sub-menu--expander"><i class="icon_plus"></i></span>
                         <ul class="sub-menu">
-                          <li><a href="login.html">logout</a></li>
+                          <li><a href="login.html" id="logout">logout</a></li>
                           
                           <li><a href="FAQ.html">FAQ</a></li>
 
@@ -161,7 +161,7 @@
                     </ul>
                   </div>
                   <div class="mobile-login" id="mobilelogin">
-                    <h2>My account</h2><a href="login.html">Logout</a>
+                    <h2>My account</h2><a href="login.html" id="logout">Logout</a>
                   </div>
                   <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                         class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
