--- a/shop_cart.html
+++ b/shop_cart.html
@@ -88,10 +88,10 @@
                       </li>
 
                       <li class="toggleable">
-                          <a class="menu-item" href="login.html">Logout</a>
+                          <a class="menu-item" href="login.html" id="logout">Logout</a>
                           <span class="sub-menu--expander"><i class="icon_plus"></i></span>
                         <ul class="sub-menu">
-                          <li><a href="login.html">logout</a></li>
+                          <li><a href="login.html" id="logout">logout</a></li>
                           
                           <li><a href="FAQ.html">FAQ</a></li>
 
@@ -103,7 +103,7 @@
                     </ul>
                   </div>
                   <div class="mobile-login" id="mobilelogin">
-                    <h2>My account</h2><a href="login.html">Logout</a>
+                    <h2>My account</h2><a href="login.html" id="logout">Logout</a>
                   </div>
                   <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                         class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
