shopping cart total

--- a/Homepage.html
+++ b/Homepage.html
@@ -5,7 +5,7 @@
   <title>IntrioBasket.ng</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-  <meta name="keywords" content="food items rice vegetables flour ecommerce shopping cart ">
+  <meta name="keywords" content="IntrioBasket.ng IntrioBasket food items rice vegetables flour ecommerce shopping cart IntrioBasket.ng IntrioBasket website">
   <meta name="author" content="IntrioBasket.ng">
 
   <link rel="stylesheet" href="assets/css/style.css">
