--- a/404_error.html
+++ b/404_error.html
@@ -143,20 +143,34 @@
                   <div class="department-menu d-flex justify-content-between align-items-center"><i class="fas fa-bars"></i>CATEGORIES<span><i class="arrow_carrot-down"></i></span></div>
                   <div class="department-dropdown-menu">
                     <ul>
-                    <li> <a class="department-link" href="shop.html">MEAT & FISH</a></li>
-                    <li> <a class="department-link" href="shop.html">EVERAGES TEAS</a></li>
-                    <li> <a class="department-link" href="shop.html">CEREAL</a></li>
-                    <li> <a class="department-link" href="shop.html">BAKING INGREDIENTS</a></li>
-                    <li> <a class="department-link" href="shop.html">VEGETABLES & LEAFY</a></li>
-                    <li> <a class="department-link" href="shop.html">TUBBERS</a></li>
-                    <li> <a class="department-link" href="shop.html">FLOUR</a></li>
-                    <li> <a class="department-link" href="shop.html">GRAINS</a></li>
-                    <li> <a class="department-link" href="shop.html">Papayaya & Crisps</a></li>
-                    <li> <a class="department-link" href="shop.html">Oatmeal</a></li>
-                    <li> <a class="department-link" href="shop.html">FRUITS</a></li>
-                    <li> <a class="department-link" href="shop.html">OILS</a></li>
-                    <li> <a class="department-link" href="shop.html">NUTS</a></li>
+                      <li><a href="shop4.html"> <i class="icon-1"></i>MEAT & FISH</a></li>
+               
+  
+                      <li><a href="shop5.html"> <i class="icon-4"></i>BAKING INGREDIENTS</a></li>
+
+                      <li><a href="shop2.html"><i class="icon-6"></i>VEGETABLES & LEAFY</a></li>
+                      <li><a href="shop3.html"><i class="icon-7"></i>TUBBERS</a></li>
+                      <li><a href="shop1.html"> <i class="icon-8"></i>FLOUR</a></li>
+
                     </ul>
+
+                  
+                    <!--
+                    <ul>
+                      <li><a href="shop.html"> <i class="icon-1"></i>MEAT & FISH</a></li>
+                      <li><a href="shop.html"> <i class="icon-2"></i>BEVERAGES TEAS</a></li>
+                      <li><a href="shop.html"> <i class="icon-3"></i>CEREAL</a></li>
+                      <li><a href="shop.html"> <i class="icon-4"></i>BAKING INGREDIENTS</a></li>
+                      <li><a href="shop.html"> <i class="icon-5"></i>SPICES</a></li>
+                      <li><a href="shop.html"><i class="icon-6"></i>VEGETABLES & LEAFY</a></li>
+                      <li><a href="shop.html"><i class="icon-7"></i>TUBBERS</a></li>
+                      <li><a href="shop.html"> <i class="icon-8"></i>FLOUR</a></li>
+                      <li><a href="shop.html"> <i class="icon-9"></i>GRAINS</a></li>
+                      <li><a href="shop.html"><i class="icon-10"></i>Oatmeal</a></li>
+                      <li><a href="shop.html"> <i class="icon-11"></i>FRUITS</a></li>
+                      <li><a href="shop.html"> <i class="icon-12"></i>OILS</a></li>
+                      <li><a href="shop.html"> <i class="icon-8"></i>NUTS</a></li>
+                    </ul>-->
                   </div>
                 </div>
               </div>
