--- a/Homepage.html
+++ b/Homepage.html
@@ -8,10 +8,20 @@
   <meta name="keywords" content="IntrioBasket.ng IntrioBasket food items rice vegetables flour ecommerce shopping cart IntrioBasket.ng IntrioBasket website">
   <meta name="author" content="IntrioBasket.ng">
 
+
+  <meta property="og:title" content="IntrioBasket |  Online Shopping for Food Products,  &amp; More!" />
+  <meta property="og:description" content="IntrioBasket the #1 Online Foodstore in Nigeria - Shop Online for All Kinds of Products &amp; Enjoy Great Prices And Offers | Secure Payments - Fast Delivery - Free Returns" />
+  <meta property="og:url" content="/" />
+  <meta property="og:image" content="assets/images/shortcut_logo.png" />
+  <meta property="og:locale" content="en_NG" />
+  <meta name="title" content="IntrioBasket |  Online Shopping for Food Products,  &amp; More!" />
+
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/custom_bootstrap.css">
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
+
+  
   <link rel="stylesheet" href="assets/css/elegant.css">
   <link rel="stylesheet" href="assets/css/animate.css">
   <link rel="stylesheet" href="assets/css/slick.css">
@@ -206,6 +216,20 @@
                 </div>
                 <div class="department-dropdown-menu">
                   <ul>
+                    <li><a href="shop4.html"> <i class="icon-1"></i>MEAT & FISH</a></li>
+               
+  
+                    <li><a href="shop5.html"> <i class="icon-4"></i>BAKING INGREDIENTS</a></li>
+
+                    <li><a href="shop2.html"><i class="icon-6"></i>VEGETABLES & LEAFY</a></li>
+                    <li><a href="shop3.html"><i class="icon-7"></i>TUBBERS</a></li>
+                    <li><a href="shop1.html"> <i class="icon-8"></i>FLOUR</a></li>
+
+                  </ul>
+
+                  
+                  <!--
+                  <ul>
                     <li><a href="shop.html"> <i class="icon-1"></i>MEAT & FISH</a></li>
                     <li><a href="shop.html"> <i class="icon-2"></i>BEVERAGES TEAS</a></li>
                     <li><a href="shop.html"> <i class="icon-3"></i>CEREAL</a></li>
@@ -219,7 +243,7 @@
                     <li><a href="shop.html"> <i class="icon-11"></i>FRUITS</a></li>
                     <li><a href="shop.html"> <i class="icon-12"></i>OILS</a></li>
                     <li><a href="shop.html"> <i class="icon-8"></i>NUTS</a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
