--- a/ManageProducts.html
+++ b/ManageProducts.html
@@ -8,6 +8,15 @@
   <meta name="keywords" content="food items rice vegetables flour ecommerce shopping cart ">
   <meta name="author" content="IntrioBasket.ng">
 
+
+
+  <meta property="og:title" content="IntrioBasket |  Online Shopping for Food Products,  &amp; More!" />
+  <meta property="og:description" content="IntrioBasket the #1 Online Foodstore in Nigeria - Shop Online for All Kinds of Products &amp; Enjoy Great Prices And Offers | Secure Payments - Fast Delivery - Free Returns" />
+  <meta property="og:url" content="/" />
+  <meta property="og:image" content="assets/images/shortcut_logo.png" />
+  <meta property="og:locale" content="en_NG" />
+  <meta name="title" content="IntrioBasket |  Online Shopping for Food Products,  &amp; More!" />
+
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/custom_bootstrap.css">
   <link rel="stylesheet" href="assets/css/normalize.css">
@@ -153,156 +162,7 @@
     </div>
     <!-- End feature-products-->
 
-    <div class="items-category">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 text-center">
-            <h1 class="title mx-auto">Product Categories</h1>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
-                  alt="BAKING INGREDIENTS">
-              </div>
-              <h2>BAKING INGREDIENTS</h2>
-              <p>38 Items</p>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop1.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FAyoola%20Poundo%20yam%20.jpg?alt=media&token=0ed5878b-a26c-4166-a0ab-fd4dfd7f54f5"
-                  alt="FLOURS">
-              </div>
-              <h2>FLOURS</h2>
-              <p>10 Items</p>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop2.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBitter%20leaf.jpg?alt=media&token=e2a0f4d9-f66a-416e-bb51-8487de6d57cc"
-                  alt="VEGETABLES/LEAFY">
-              </div>
-              <h2>VEGETABLES/LEAFY</h2>
-              <p>10 Items</p>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop3.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCassava%202.jpg?alt=media&token=f87c5f65-09fb-4d8e-93b8-c6da10d8dd95"
-                  alt="TUBERS">
-              </div>
-              <h2>TUBERS</h2>
-              <p>36 Items</p>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop4.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FLiver.jpg?alt=media&token=f48d7dd5-dea4-466e-a7b6-666c85ccca9c"
-                  alt="MEAT AND FISH/FISH">
-              </div>
-              <h2>MEAT AND FISH/FISH</h2>
-              <p>24 Items</p>
-            </a>
-          </div>
 
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop6spices.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FMaggi.jpg?alt=media&token=a4d825db-e853-4df9-b977-31e67fa9e8c5"
-                  alt="SPICES">
-              </div>
-              <h2>SPICES</h2>
-              <p>11 Items</p>
-            </a>
-          </div>
-
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop5grains.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FRice%20krispies.jpg?alt=media&token=10939f14-c187-4978-82af-ac8244ee8da1"
-                  alt="GRAINS">
-              </div>
-              <h2>GRAINS</h2>
-              <p>5 Items</p>
-            </a>
-          </div>
-
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop7oil.html">
-              <div class="categories-img">
-                <img
-                  src="assets/images/homepage01/slider_img_1ab.png"
-                  alt="OILS">
-              </div>
-              <h2>OILS</h2>
-              <p>5 Items</p>
-            </a>
-          </div>
-
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop8nuts.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCocoa%20powder.jpg?alt=media&token=559bf635-aeed-4dff-be67-b67071c4b4c3"
-                  alt="NUTS">
-              </div>
-              <h2>NUTS</h2>
-              <p>10 Items</p>
-            </a>
-          </div>
-
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop11beveragetea.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FLipton.jpg?alt=media&token=1bb64dd6-8b11-40aa-9fde-2a8164bdce5f"
-                  alt="BEVERAGES_TEAS">
-              </div>
-              <h2>BEVERAGES_TEAS</h2>
-              <p>12 Items</p>
-            </a>
-          </div>
-
-
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop10Cereal.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FGolden%20morn%20.jpg?alt=media&token=89bab744-e4ee-400d-a76a-0d156e9419d2"
-                  alt="CEREAL">
-              </div>
-              <h2>CEREAL</h2>
-              <p>8 Items</p>
-            </a>
-          </div>
-
-          <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop9fruits.html">
-              <div class="categories-img">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FGreen%20pepper%202.jpg?alt=media&token=1eae3d08-6927-4001-8aca-28a2abd46c37"
-                  alt="FRUITS">
-              </div>
-              <h2>FRUITS</h2>
-              <p>15 Items</p> 
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End items-category-->
 
 
 
