--- a/FAQ.html
+++ b/FAQ.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
     <meta name="author" content="MARTECH | Deer Creative Theme">
+
+
+    <meta property="og:title" content="IntrioBasket |  Online Shopping for Food Products,  &amp; More!" />
+    <meta property="og:description" content="IntrioBasket the #1 Online Foodstore in Nigeria - Shop Online for All Kinds of Products &amp; Enjoy Great Prices And Offers | Secure Payments - Fast Delivery - Free Returns" />
+    <meta property="og:url" content="/" />
+    <meta property="og:image" content="assets/images/shortcut_logo.png" />
+    <meta property="og:locale" content="en_NG" />
+    <meta name="title" content="IntrioBasket |  Online Shopping for Food Products,  &amp; More!" />
+    
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/custom_bootstrap.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
