--- a/admindashboard/dashboard.html
+++ b/admindashboard/dashboard.html
@@ -39,10 +39,10 @@
         <a class="nav-link" data-widget="pushmenu" href="javascript:void()" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link">Home</a>
+        <a href="../index.html" class="nav-link">Home</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="javascript:void()" class="nav-link">Contact</a>
+        <a href="../contact_us.html" class="nav-link">Contact</a>
       </li>
     </ul>
 
@@ -158,11 +158,16 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="/assets/images/admin.png" class="img-circle elevation-2" alt="User Image">
         </div>
-        <div class="info">
-          <a href="javascript:void()" class="d-block">Admin Profile</a>
+
+
+        <div id="AdminName">
         </div>
+          
+   
+
+
       </div>
 
       <!-- Sidebar Menu -->
