--- a/shop_compare.html
+++ b/shop_compare.html
@@ -4,7 +4,7 @@
     <title>Index</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
+    <meta name="keywords" content="IntrioBasket.ng IntrioBasket food items rice vegetables flour ecommerce shopping cart IntrioBasket.ng IntrioBasket website">
     <meta name="author" content="MARTECH | Deer Creative Theme">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/custom_bootstrap.css">
@@ -144,20 +144,34 @@
                   <div class="department-menu d-flex justify-content-between align-items-center"><i class="fas fa-bars"></i>CATEGORIES<span><i class="arrow_carrot-down"></i></span></div>
                   <div class="department-dropdown-menu">
                     <ul>
-                    <li><a href="shop.html"> <i class="icon-1"></i>MEAT & FISH</a></li>
-                    <li><a href="shop.html"> <i class="icon-2"></i>BEVERAGES TEAS</a></li>
-                    <li><a href="shop.html"> <i class="icon-3"></i>CEREAL</a></li>
-                    <li><a href="shop.html"> <i class="icon-4"></i>BAKING INGREDIENTS</a></li>
-                    <li><a href="shop.html"> <i class="icon-5"></i>SPICES</a></li>
-                    <li><a href="shop.html"><i class="icon-6"></i>VEGETABLES & LEAFY</a></li>
-                    <li><a href="shop.html"><i class="icon-7"></i>TUBBERS</a></li>
-                    <li><a href="shop.html"> <i class="icon-8"></i>FLOUR</a></li>
-                    <li><a href="shop.html"> <i class="icon-9"></i>GRAINS</a></li>
-                    <li><a href="shop.html"><i class="icon-10"></i>Oatmeal</a></li>
-                    <li><a href="shop.html"> <i class="icon-11"></i>FRUITS</a></li>
-                    <li><a href="shop.html"> <i class="icon-12"></i>OILS</a></li>
-                    <li><a href="shop.html"> <i class="icon-8"></i>NUTS</a></li>
+                      <li><a href="shop4.html"> <i class="icon-1"></i>MEAT & FISH</a></li>
+               
+  
+                      <li><a href="shop5.html"> <i class="icon-4"></i>BAKING INGREDIENTS</a></li>
+
+                      <li><a href="shop2.html"><i class="icon-6"></i>VEGETABLES & LEAFY</a></li>
+                      <li><a href="shop3.html"><i class="icon-7"></i>TUBBERS</a></li>
+                      <li><a href="shop1.html"> <i class="icon-8"></i>FLOUR</a></li>
+
                     </ul>
+
+                  
+                    <!--
+                    <ul>
+                      <li><a href="shop.html"> <i class="icon-1"></i>MEAT & FISH</a></li>
+                      <li><a href="shop.html"> <i class="icon-2"></i>BEVERAGES TEAS</a></li>
+                      <li><a href="shop.html"> <i class="icon-3"></i>CEREAL</a></li>
+                      <li><a href="shop.html"> <i class="icon-4"></i>BAKING INGREDIENTS</a></li>
+                      <li><a href="shop.html"> <i class="icon-5"></i>SPICES</a></li>
+                      <li><a href="shop.html"><i class="icon-6"></i>VEGETABLES & LEAFY</a></li>
+                      <li><a href="shop.html"><i class="icon-7"></i>TUBBERS</a></li>
+                      <li><a href="shop.html"> <i class="icon-8"></i>FLOUR</a></li>
+                      <li><a href="shop.html"> <i class="icon-9"></i>GRAINS</a></li>
+                      <li><a href="shop.html"><i class="icon-10"></i>Oatmeal</a></li>
+                      <li><a href="shop.html"> <i class="icon-11"></i>FRUITS</a></li>
+                      <li><a href="shop.html"> <i class="icon-12"></i>OILS</a></li>
+                      <li><a href="shop.html"> <i class="icon-8"></i>NUTS</a></li>
+                    </ul>-->
                   </div>
                 </div>
               </div>
