--- a/ManageProducts.html
+++ b/ManageProducts.html
@@ -94,7 +94,9 @@
   
 
  
-               <div class="m-3 ">           
+               <div class="m-3 ">     
+
+             
 
               <input type="text" id="food_product_name" name="food_product_name" class="no-round-input" placeholder="Food Product Name" required/>
 
@@ -129,6 +131,11 @@
               <div class="m-3">
 
               <input type="text" id="image_link" name="image_link" class="no-round-input" placeholder="Image Link" required/>
+
+
+            <!--Uploading product image -->
+             <input class="no-round-btn" type='file' />
+             <br><img id="myImg" src="#" alt="your image" height=200 width=200>      
 
               </div>
               <select class="no-round-input m-3" id="in_stock_status" type="text" name="inStock"> 
