--- a/shop.html
+++ b/shop.html
@@ -260,7 +260,7 @@
                                     src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBitter%20leaf.jpg?alt=media&token=e2a0f4d9-f66a-416e-bb51-8487de6d57cc"
                                     alt="VEGETABLES/LEAFY">
                                 </div>
-                                <h2>VEGETABLES/LEAFY</h2>
+                                <h2>VEGETABLES</h2>
                                 <p>10 Items</p>
                               </a>
                             </div>
