--- a/ManageProducts.html
+++ b/ManageProducts.html
@@ -130,12 +130,14 @@
 
               <div class="m-3">
 
-              <input type="text" id="image_link" name="image_link" class="no-round-input" placeholder="Image Link" required/>
+
+              <!--
+              <input type="text" id="image_link" name="image_link" class="no-round-input" placeholder="Image Link" required/> -->
 
 
             <!--Uploading product image -->
              <input class="no-round-btn" type='file' />
-             <br><img id="myImg" src="#" alt="your image" height=200 width=200>      
+             <br><img id="myImg" src="#" alt="UPLOAD PRODUCT IMAGE" height=200 width=200>      
 
               </div>
               <select class="no-round-input m-3" id="in_stock_status" type="text" name="inStock"> 
