--- a/Homepage.html
+++ b/Homepage.html
@@ -268,6 +268,13 @@
               </div>
             </div>
           </div>
+          <!-- The form -->
+     
+          <form class="example" action="action_page.php" style="width: 350px;">
+            <input type="text" placeholder="Search.." name="search" class="round-input">
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+        
         </div>
 
         <!-- quick link-->
@@ -319,10 +326,13 @@
               </div>
 
               <!-- The form -->
-              <form class="example" action="action_page.php" style="width: 350px;">
-                <input type="text" placeholder="Search.." name="search" class="round-input">
-                <button type="submit"><i class="fa fa-search"></i></button>
-              </form>
+              <!-- The form -->
+              <div id="mobileSearch">
+                <form class="example" action="action_page.php" style="width: 350px;">
+                  <input type="text" placeholder="Search.." name="search" class="round-input">
+                  <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+                </div>
 
 
             </div>
