--- a/shop10cereal.html
+++ b/shop10cereal.html
@@ -191,6 +191,10 @@
                       <li><a href="shop.html"> <i class="icon-8"></i>NUTS</a></li>
                     </ul>-->
                   </div>
+                  <form class="example" action="#" style="width: 350px;">
+                    <input type="text" placeholder="Search.." name="search" class="round-input">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                  </form>
                 </div>
               </div>
               <div class="col-12 col-md-8 col-lg-8 col-xl-9 order-1 order-md-2">
