--- a/Homepage.html
+++ b/Homepage.html
@@ -31,9 +31,7 @@
   <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
 
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
-  <!-- Load icon library -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+ 
 
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="/resources/demos/style.css">
@@ -270,7 +268,7 @@
           </div>
           <!-- The form -->
      
-          <form class="example" action="action_page.php" style="width: 350px;">
+          <form class="example" action="#" style="width: 350px;">
             <input type="text" placeholder="Search.." name="search" class="round-input">
             <button type="submit"><i class="fa fa-search"></i></button>
           </form>
@@ -325,14 +323,14 @@
                 </div>
               </div>
 
-              <!-- The form -->
+             
               <!-- The form -->
               <div id="mobileSearch">
-                <form class="example" action="action_page.php" style="width: 350px;">
+                <form class="example" action="#" style="width: 350px;">
                   <input type="text" placeholder="Search.." name="search" class="round-input">
                   <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
-                </div>
+              </div>
 
 
             </div>
