--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
   <link rel='stylesheet' href="assets/css/owl.carousel.min.css">
   <link rel='stylesheet' href="assets/css/owl.theme.default.css">
   <link rel="stylesheet" href="assets/css/jquery.bxslider.css">
-  <!-- Load icon library -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+ 
 
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="/resources/demos/style.css">
@@ -274,7 +272,7 @@
      
           </div>
      
-          <form class="example" action="action_page.php" style="width: 350px;">
+          <form class="example" action="#" style="width: 350px;">
             <input type="text" placeholder="Search.." name="search" class="round-input">
             <button type="submit"><i class="fa fa-search"></i></button>
           </form>
