--- a/ManageProducts.html
+++ b/ManageProducts.html
@@ -360,7 +360,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center card-title">
-            <h1 class="title mx-auto">Edit Products</h1>
+            <h1 class="title mx-auto">Delete Products</h1>
                </div>
           <div id="tab-1">
             <div id="ManageProducts" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
