--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -19,6 +19,13 @@
   <link rel="stylesheet" href="assets/css/icomoon.css">
   <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
   <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
+
+
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 </head>
 
 <body>
@@ -163,6 +170,13 @@
                 </ul>
               </div>
             </div>
+
+            <div id="dialog-confirm" title="Intriobasket says">
+            
+            </div>
+
+
+
             <div class="col-4 col-xl-6 col-xxxl-2 order-xl-2 order-xxxl-4">
               <div class="product-function d-flex align-items-center justify-content-center justify-content-xl-end">
                 <div id="wishlist">
