--- a/login.html
+++ b/login.html
@@ -167,6 +167,11 @@
                     <label for="savepass">Save Password</label>
                   </div>
 
+                    <div class="account-save">
+                   <a class="create-account" href="/forgetPassword.html"><label> Reset Password</label></a>
+                    </div>
+
+
                   </div>
                 <div class="account-function">
                   <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="register.html">Or create an account</a>
