--- a/Homepage.html
+++ b/Homepage.html
@@ -378,7 +378,7 @@
 
           <!--Make sure the form has the autocomplete function switched off:-->
           
-          <form autocomplete="off" action="/action_page.php" class="example">
+          <form autocomplete="off" action="#" class="example" id="searchForm">
             <div class="autocomplete" >
               <input id="myInput" type="text" name="myFood" placeholder="Food Items.." class="no-round-input">
             </div>
