--- a/shop_cart.html
+++ b/shop_cart.html
@@ -17,6 +17,9 @@
   <meta property="og:locale" content="en_NG" />
   <meta name="title" content="IntrioBasket |  Online Shopping for Food Products,  &amp; More!" />
   
+
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
   <meta name="author" content="MARTECH | Deer Creative Theme">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/custom_bootstrap.css">
