--- a/Homepage.html
+++ b/Homepage.html
@@ -16,6 +16,9 @@
   <meta property="og:locale" content="en_NG" />
   <meta name="title" content="IntrioBasket |  Online Shopping for Food Products,  &amp; More!" />
 
+
+
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/custom_bootstrap.css">
   <link rel="stylesheet" href="assets/css/normalize.css">
