--- a/shop_compare.html
+++ b/shop_compare.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="IntrioBasket.ng IntrioBasket food items rice vegetables flour ecommerce shopping cart IntrioBasket.ng IntrioBasket website">
     <meta name="author" content="MARTECH | Deer Creative Theme">
+
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/custom_bootstrap.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
