--- a/Homepage.html
+++ b/Homepage.html
@@ -1033,7 +1033,7 @@
     <div class="container">
       <div class="row justify-content-center">
           <div class="col-12 text-center">
-            <h2 class="title green-underline mx-auto" href="https://play.google.com/store/apps/details?id">Download the App now.</h2>
+            <h2 class="title green-underline mx-auto" href="https://play.google.com/store/apps/details?id=com.exceptos.intriobasket">Download the App now.</h2>
 
             <h6 class="mt-4 img-mobile">
 
@@ -1043,7 +1043,9 @@
               directly from farmers and wholesalers at your convenience. Download the app and enjoy discounts on your food and grocery shopping. Available on Android. 
 
             </h6>
-            <a href="https://play.google.com/store/apps/details?id"><img class="playStore" src="assets/images/homepage01/get-on-google.webp" alt="Foodlocker Mobile"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.exceptos.intriobasket"><img class="playStore" src="assets/images/homepage01/get-on-google.webp" alt="IntrioBasket Mobile"></a>
+
+            <a href="https://play.google.com/store/apps/details?id=com.exceptos.intriobasket"><img class="playStore andriodcurve" src="/assets/images/Appinterface.jpeg" alt="IntrioBasket Mobile"></a>
 
 
           </div>
