--- a/resetform.html
+++ b/resetform.html
@@ -169,7 +169,7 @@
               
               
                 <div class="account-function">
-                <button class="no-round-btn" type="submit">Set Password</button><a class="create-account" href="login.html">Or login</a>
+                <button class="no-round-btn" type="submit">Set Password</button><a class="create-account" href="resetEmailPassword.html">Resend Link</a>
                 </div>
             </form>
             </div>
@@ -256,11 +256,11 @@
     <script src="assets/js/vanilla-tilt.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
+  
 
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
+    <script type="text/javascript" src="assets/js/resetEmailPassword.js"></script>
+   
 
     <script type="text/javascript" src="assets/js/formvalidationRegistration.js"></script>
 
@@ -268,9 +268,7 @@
 --> 
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
     <script type="text/javascript" src="assets/js/materialize.js"></script>
-    <script type="text/javascript" src="assets/js/resetEmailPassword.js"></script>
-   
-
+  
  
 
  
