--- a/admindashboard/dashboardAggregator.html
+++ b/admindashboard/dashboardAggregator.html
@@ -288,14 +288,14 @@
             <!-- small box -->
             <div class="small-box bg-info">
               <div class="inner">
-                <h3>Edit</h3>
+                <h5>Edit [ Aggregator ]</h5>
 
                 <h6>Manage Food Items</h6>
               </div>
               <div class="icon">
                 <i class="fas fa-edit"></i>
               </div>
-              <a href="../ManageProducts.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              <a href="../ManageProductsAggregator.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
 
@@ -314,7 +314,7 @@
               <div class="icon">
                 <i class="fas fa-edit"></i>
               </div>
-              <a href="../ManageProducts.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              <a href="../AllPendingOrders.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
 
@@ -498,6 +498,9 @@
 <script src="dist/js/adminlte.js"></script>
 <!-- IntrioBasket dashboard demo (This is only for demo purposes) -->
 <script src="dist/js/pages/dashboard.js"></script>
+
+
+<script src="..js/utils/AuthenticationAdminLogin.js"></script>
 
 
 
