--- a/admindashboard/dashboardSuperAdmin.html
+++ b/admindashboard/dashboardSuperAdmin.html
@@ -315,7 +315,7 @@
               <div class="icon">
                 <i class="fas fa-edit"></i>
               </div>
-              <a href="../ManageProductsSuperAdmin.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              <a href="../AllPendingOrders.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
 
@@ -500,6 +500,9 @@
 <!-- IntrioBasket dashboard demo (This is only for demo purposes) -->
 <script src="dist/js/pages/dashboard.js"></script>
 
+
+
+<script src="..js/utils/AuthenticationAdminLogin.js"></script>
 
 
 <!--Config -->
