--- a/order.html
+++ b/order.html
@@ -34,6 +34,8 @@ $( function() {
 <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>Continue shopping or Goto Cart</p>
 </div>
 
- 
+
+<script src="js/utils/AuthenticationUserLogin.js"></script>
+
 </body>
 </html>
