--- a/Homepage.html
+++ b/Homepage.html
@@ -1125,6 +1125,9 @@
     <!-- End footer-->
   </div>
 
+  <script src="js/utils/AuthenticationUserLogin.js"></script>
+
+
  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="assets/js/jquery-ui.min.js"></script>
