--- a/ManageProductsSuperAdmin.html
+++ b/ManageProductsSuperAdmin.html
@@ -70,7 +70,7 @@
       <div class="container">
         <ul>
           <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
-          <li> <a class="breadcrumb-link" href="/admindashboard/dashboard.html">Dashboard</a></li>
+          <li> <a class="breadcrumb-link" href="/admindashboard/dashboardSuperAdmin.html">Dashboard</a></li>
           <li> <a class="breadcrumb-link active" href="javascript:void()">Admin</a></li>
         </ul>
       </div>
@@ -825,6 +825,8 @@
     </footer>
     <!-- End footer-->
   </div>
+  <script src="js/utils/AuthenticationAdminLogin.js"></script>
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="assets/js/jquery-ui.min.js"></script>
