--- a/admindashboard/dashboardadmin.html
+++ b/admindashboard/dashboardadmin.html
@@ -283,7 +283,7 @@
             <!-- small box -->
             <div class="small-box bg-info">
               <div class="inner">
-                <h3>Edit</h3>
+                <h5>Edit [Admin]</h5>
 
                 <h6>Manage Food Items</h6>
               </div>
@@ -474,6 +474,9 @@
 <script src="dist/js/adminlte.js"></script>
 <!-- IntrioBasket dashboard demo (This is only for demo purposes) -->
 <script src="dist/js/pages/dashboard.js"></script>
+
+
+<script src="..js/utils/AuthenticationAdminLogin.js"></script>
 
 
 
