--- a/coming_soon.html
+++ b/coming_soon.html
@@ -36,6 +36,9 @@
       </div>
       <!-- End coming soon-->
     </div>
+
+    <script src="js/utils/AuthenticationUserLogin.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/js/jquery-ui.min.js"></script>
     <script src="assets/js/jquery.countdown.min.js"></script>
