--- a/shop1.html
+++ b/shop1.html
@@ -640,6 +640,9 @@
       </footer>
       <!-- End footer-->
     </div>
+
+    <script src="js/utils/AuthenticationUserLogin.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/js/jquery-ui.min.js"></script>
     <script src="assets/js/jquery.countdown.min.js"></script>
