--- a/loginadmin.html
+++ b/loginadmin.html
@@ -160,6 +160,11 @@
                     <label for="savepass">Save Password</label>
                   </div>
 
+                     <div class="account-save">
+                     <a class="create-account" href="/resetEmailPassword.html"><label> Reset Password</label></a>
+                      </div>
+
+
                   </div>
                 <div class="account-function">
                   <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="registeradmin.html">Or create an account</a>
