--- a/login.html
+++ b/login.html
@@ -168,7 +168,7 @@
                   </div>
 
                     <div class="account-save">
-                   <a class="create-account" href="/resetEmail.html"><label> Reset Password</label></a>
+                   <a class="create-account" href="/resetEmailPassword.html"><label> Reset Password</label></a>
                     </div>
 
 
