--- a/registeradmin.html
+++ b/registeradmin.html
@@ -170,6 +170,11 @@
                 <span class="helper-text"></span>
 
 
+                <label for="user-name">ROLE *</label>
+                <input class="no-round-input" id="role" type="text" name="role">
+              
+
+
 
                 <label for="user-name">Phone Number</label>
                 <input class="no-round-input" id="phonenumber" type="text" name="phonenumber">
