--- a/shop_cart.html
+++ b/shop_cart.html
@@ -404,7 +404,7 @@
     <!-- End footer-->
   </div>
 
-  <script src="js/utils/AuthenticationUserLogin.js"></script>
+  <!--<script src="js/utils/AuthenticationUserLogin.js"></script>-->
 
 
   <script src="js/services/updateCart.js"></script>
